@@ -38,7 +38,7 @@ libout123_mod_cppflags = -DBUILDING_OUTPUT_MODULES=1
 #  -export-dynamic  -export-symbols-regex '"'"'^mpg123_'"'"' \\
 #  \@${big}_LDFLAGS\@
 #src_libout123_modules_output_${_}_la_CFLAGS   = \@${big}_CFLAGS\@
-#src_libout123_modules_output_${_}_la_LIBADD   = \\
+#src_libout123_modules_output_${_}_la_LIBADD   = \@PROG_LIBS\@ \\
 #  src/compat/libcompat_str.la \\
 #  \@${big}_LIBS\@
 #src_libout123_modules_outout_${_}_la_CPPFLAGS = \\
@@ -51,7 +51,7 @@ libout123_mod_cppflags = -DBUILDING_OUTPUT_MODULES=1
 #  src/libout123/modules/$_.c
 #src_libout123_modules_libdefaultmodule_la_CFLAGS   = \@${big}_CFLAGS\@
 #src_libout123_modules_libdefaultmodule_la_LDFLAGS  = \@${big}_LDFLAGS\@
-#src_libout123_modules_libdefaultmodule_la_LIBADD   = \@${big}_LIBS\@
+#src_libout123_modules_libdefaultmodule_la_LIBADD   = \@PROG_LIBS\@ \@${big}_LIBS\@
 #src_libout123_modules_libdefaultmodule_la_CPPFLAGS = \\
 #  \$(AM_CPPFLAGS) \\
 #  \$(libout123_mod_cppflags)
@@ -71,7 +71,7 @@ src_libout123_modules_output_dummy_la_LDFLAGS = \
   -export-dynamic  -export-symbols-regex '^mpg123_' \
   @DUMMY_LDFLAGS@
 src_libout123_modules_output_dummy_la_CFLAGS   = @DUMMY_CFLAGS@
-src_libout123_modules_output_dummy_la_LIBADD   = \
+src_libout123_modules_output_dummy_la_LIBADD   = @PROG_LIBS@ \
   src/compat/libcompat_str.la \
   @DUMMY_LIBS@
 src_libout123_modules_outout_dummy_la_CPPFLAGS = \
@@ -84,7 +84,7 @@ src_libout123_modules_libdefaultmodule_la_SOURCES  = \
   src/libout123/modules/dummy.c
 src_libout123_modules_libdefaultmodule_la_CFLAGS   = @DUMMY_CFLAGS@
 src_libout123_modules_libdefaultmodule_la_LDFLAGS  = @DUMMY_LDFLAGS@
-src_libout123_modules_libdefaultmodule_la_LIBADD   = @DUMMY_LIBS@
+src_libout123_modules_libdefaultmodule_la_LIBADD   = @PROG_LIBS@ @DUMMY_LIBS@
 src_libout123_modules_libdefaultmodule_la_CPPFLAGS = \
   $(AM_CPPFLAGS) \
   $(libout123_mod_cppflags)
@@ -101,7 +101,7 @@ src_libout123_modules_output_tinyalsa_la_LDFLAGS = \
   -export-dynamic  -export-symbols-regex '^mpg123_' \
   @TINYALSA_LDFLAGS@
 src_libout123_modules_output_tinyalsa_la_CFLAGS   = @TINYALSA_CFLAGS@
-src_libout123_modules_output_tinyalsa_la_LIBADD   = \
+src_libout123_modules_output_tinyalsa_la_LIBADD   = @PROG_LIBS@ \
   src/compat/libcompat_str.la \
   @TINYALSA_LIBS@
 src_libout123_modules_outout_tinyalsa_la_CPPFLAGS = \
@@ -114,7 +114,7 @@ src_libout123_modules_libdefaultmodule_la_SOURCES  = \
   src/libout123/modules/tinyalsa.c
 src_libout123_modules_libdefaultmodule_la_CFLAGS   = @TINYALSA_CFLAGS@
 src_libout123_modules_libdefaultmodule_la_LDFLAGS  = @TINYALSA_LDFLAGS@
-src_libout123_modules_libdefaultmodule_la_LIBADD   = @TINYALSA_LIBS@
+src_libout123_modules_libdefaultmodule_la_LIBADD   = @PROG_LIBS@ @TINYALSA_LIBS@
 src_libout123_modules_libdefaultmodule_la_CPPFLAGS = \
   $(AM_CPPFLAGS) \
   $(libout123_mod_cppflags)
@@ -131,7 +131,7 @@ src_libout123_modules_output_alsa_la_LDFLAGS = \
   -export-dynamic  -export-symbols-regex '^mpg123_' \
   @ALSA_LDFLAGS@
 src_libout123_modules_output_alsa_la_CFLAGS   = @ALSA_CFLAGS@
-src_libout123_modules_output_alsa_la_LIBADD   = \
+src_libout123_modules_output_alsa_la_LIBADD   = @PROG_LIBS@ \
   src/compat/libcompat_str.la \
   @ALSA_LIBS@
 src_libout123_modules_outout_alsa_la_CPPFLAGS = \
@@ -144,7 +144,7 @@ src_libout123_modules_libdefaultmodule_la_SOURCES  = \
   src/libout123/modules/alsa.c
 src_libout123_modules_libdefaultmodule_la_CFLAGS   = @ALSA_CFLAGS@
 src_libout123_modules_libdefaultmodule_la_LDFLAGS  = @ALSA_LDFLAGS@
-src_libout123_modules_libdefaultmodule_la_LIBADD   = @ALSA_LIBS@
+src_libout123_modules_libdefaultmodule_la_LIBADD   = @PROG_LIBS@ @ALSA_LIBS@
 src_libout123_modules_libdefaultmodule_la_CPPFLAGS = \
   $(AM_CPPFLAGS) \
   $(libout123_mod_cppflags)
@@ -161,7 +161,7 @@ src_libout123_modules_output_qsa_la_LDFLAGS = \
   -export-dynamic  -export-symbols-regex '^mpg123_' \
   @QSA_LDFLAGS@
 src_libout123_modules_output_qsa_la_CFLAGS   = @QSA_CFLAGS@
-src_libout123_modules_output_qsa_la_LIBADD   = \
+src_libout123_modules_output_qsa_la_LIBADD   = @PROG_LIBS@ \
   src/compat/libcompat_str.la \
   @QSA_LIBS@
 src_libout123_modules_outout_qsa_la_CPPFLAGS = \
@@ -174,7 +174,7 @@ src_libout123_modules_libdefaultmodule_la_SOURCES  = \
   src/libout123/modules/qsa.c
 src_libout123_modules_libdefaultmodule_la_CFLAGS   = @QSA_CFLAGS@
 src_libout123_modules_libdefaultmodule_la_LDFLAGS  = @QSA_LDFLAGS@
-src_libout123_modules_libdefaultmodule_la_LIBADD   = @QSA_LIBS@
+src_libout123_modules_libdefaultmodule_la_LIBADD   = @PROG_LIBS@ @QSA_LIBS@
 src_libout123_modules_libdefaultmodule_la_CPPFLAGS = \
   $(AM_CPPFLAGS) \
   $(libout123_mod_cppflags)
@@ -191,7 +191,7 @@ src_libout123_modules_output_coreaudio_la_LDFLAGS = \
   -export-dynamic  -export-symbols-regex '^mpg123_' \
   @COREAUDIO_LDFLAGS@
 src_libout123_modules_output_coreaudio_la_CFLAGS   = @COREAUDIO_CFLAGS@
-src_libout123_modules_output_coreaudio_la_LIBADD   = \
+src_libout123_modules_output_coreaudio_la_LIBADD   = @PROG_LIBS@ \
   src/compat/libcompat_str.la \
   @COREAUDIO_LIBS@
 src_libout123_modules_outout_coreaudio_la_CPPFLAGS = \
@@ -204,7 +204,7 @@ src_libout123_modules_libdefaultmodule_la_SOURCES  = \
   src/libout123/modules/coreaudio.c
 src_libout123_modules_libdefaultmodule_la_CFLAGS   = @COREAUDIO_CFLAGS@
 src_libout123_modules_libdefaultmodule_la_LDFLAGS  = @COREAUDIO_LDFLAGS@
-src_libout123_modules_libdefaultmodule_la_LIBADD   = @COREAUDIO_LIBS@
+src_libout123_modules_libdefaultmodule_la_LIBADD   = @PROG_LIBS@ @COREAUDIO_LIBS@
 src_libout123_modules_libdefaultmodule_la_CPPFLAGS = \
   $(AM_CPPFLAGS) \
   $(libout123_mod_cppflags)
@@ -221,7 +221,7 @@ src_libout123_modules_output_esd_la_LDFLAGS = \
   -export-dynamic  -export-symbols-regex '^mpg123_' \
   @ESD_LDFLAGS@
 src_libout123_modules_output_esd_la_CFLAGS   = @ESD_CFLAGS@
-src_libout123_modules_output_esd_la_LIBADD   = \
+src_libout123_modules_output_esd_la_LIBADD   = @PROG_LIBS@ \
   src/compat/libcompat_str.la \
   @ESD_LIBS@
 src_libout123_modules_outout_esd_la_CPPFLAGS = \
@@ -234,7 +234,7 @@ src_libout123_modules_libdefaultmodule_la_SOURCES  = \
   src/libout123/modules/esd.c
 src_libout123_modules_libdefaultmodule_la_CFLAGS   = @ESD_CFLAGS@
 src_libout123_modules_libdefaultmodule_la_LDFLAGS  = @ESD_LDFLAGS@
-src_libout123_modules_libdefaultmodule_la_LIBADD   = @ESD_LIBS@
+src_libout123_modules_libdefaultmodule_la_LIBADD   = @PROG_LIBS@ @ESD_LIBS@
 src_libout123_modules_libdefaultmodule_la_CPPFLAGS = \
   $(AM_CPPFLAGS) \
   $(libout123_mod_cppflags)
@@ -251,7 +251,7 @@ src_libout123_modules_output_jack_la_LDFLAGS = \
   -export-dynamic  -export-symbols-regex '^mpg123_' \
   @JACK_LDFLAGS@
 src_libout123_modules_output_jack_la_CFLAGS   = @JACK_CFLAGS@
-src_libout123_modules_output_jack_la_LIBADD   = \
+src_libout123_modules_output_jack_la_LIBADD   = @PROG_LIBS@ \
   src/compat/libcompat_str.la \
   @JACK_LIBS@
 src_libout123_modules_outout_jack_la_CPPFLAGS = \
@@ -264,7 +264,7 @@ src_libout123_modules_libdefaultmodule_la_SOURCES  = \
   src/libout123/modules/jack.c
 src_libout123_modules_libdefaultmodule_la_CFLAGS   = @JACK_CFLAGS@
 src_libout123_modules_libdefaultmodule_la_LDFLAGS  = @JACK_LDFLAGS@
-src_libout123_modules_libdefaultmodule_la_LIBADD   = @JACK_LIBS@
+src_libout123_modules_libdefaultmodule_la_LIBADD   = @PROG_LIBS@ @JACK_LIBS@
 src_libout123_modules_libdefaultmodule_la_CPPFLAGS = \
   $(AM_CPPFLAGS) \
   $(libout123_mod_cppflags)
@@ -281,7 +281,7 @@ src_libout123_modules_output_nas_la_LDFLAGS = \
   -export-dynamic  -export-symbols-regex '^mpg123_' \
   @NAS_LDFLAGS@
 src_libout123_modules_output_nas_la_CFLAGS   = @NAS_CFLAGS@
-src_libout123_modules_output_nas_la_LIBADD   = \
+src_libout123_modules_output_nas_la_LIBADD   = @PROG_LIBS@ \
   src/compat/libcompat_str.la \
   @NAS_LIBS@
 src_libout123_modules_outout_nas_la_CPPFLAGS = \
@@ -294,7 +294,7 @@ src_libout123_modules_libdefaultmodule_la_SOURCES  = \
   src/libout123/modules/nas.c
 src_libout123_modules_libdefaultmodule_la_CFLAGS   = @NAS_CFLAGS@
 src_libout123_modules_libdefaultmodule_la_LDFLAGS  = @NAS_LDFLAGS@
-src_libout123_modules_libdefaultmodule_la_LIBADD   = @NAS_LIBS@
+src_libout123_modules_libdefaultmodule_la_LIBADD   = @PROG_LIBS@ @NAS_LIBS@
 src_libout123_modules_libdefaultmodule_la_CPPFLAGS = \
   $(AM_CPPFLAGS) \
   $(libout123_mod_cppflags)
@@ -311,7 +311,7 @@ src_libout123_modules_output_oss_la_LDFLAGS = \
   -export-dynamic  -export-symbols-regex '^mpg123_' \
   @OSS_LDFLAGS@
 src_libout123_modules_output_oss_la_CFLAGS   = @OSS_CFLAGS@
-src_libout123_modules_output_oss_la_LIBADD   = \
+src_libout123_modules_output_oss_la_LIBADD   = @PROG_LIBS@ \
   src/compat/libcompat_str.la \
   @OSS_LIBS@
 src_libout123_modules_outout_oss_la_CPPFLAGS = \
@@ -324,7 +324,7 @@ src_libout123_modules_libdefaultmodule_la_SOURCES  = \
   src/libout123/modules/oss.c
 src_libout123_modules_libdefaultmodule_la_CFLAGS   = @OSS_CFLAGS@
 src_libout123_modules_libdefaultmodule_la_LDFLAGS  = @OSS_LDFLAGS@
-src_libout123_modules_libdefaultmodule_la_LIBADD   = @OSS_LIBS@
+src_libout123_modules_libdefaultmodule_la_LIBADD   = @PROG_LIBS@ @OSS_LIBS@
 src_libout123_modules_libdefaultmodule_la_CPPFLAGS = \
   $(AM_CPPFLAGS) \
   $(libout123_mod_cppflags)
@@ -341,7 +341,7 @@ src_libout123_modules_output_portaudio_la_LDFLAGS = \
   -export-dynamic  -export-symbols-regex '^mpg123_' \
   @PORTAUDIO_LDFLAGS@
 src_libout123_modules_output_portaudio_la_CFLAGS   = @PORTAUDIO_CFLAGS@
-src_libout123_modules_output_portaudio_la_LIBADD   = \
+src_libout123_modules_output_portaudio_la_LIBADD   = @PROG_LIBS@ \
   src/compat/libcompat_str.la \
   @PORTAUDIO_LIBS@
 src_libout123_modules_outout_portaudio_la_CPPFLAGS = \
@@ -354,7 +354,7 @@ src_libout123_modules_libdefaultmodule_la_SOURCES  = \
   src/libout123/modules/portaudio.c
 src_libout123_modules_libdefaultmodule_la_CFLAGS   = @PORTAUDIO_CFLAGS@
 src_libout123_modules_libdefaultmodule_la_LDFLAGS  = @PORTAUDIO_LDFLAGS@
-src_libout123_modules_libdefaultmodule_la_LIBADD   = @PORTAUDIO_LIBS@
+src_libout123_modules_libdefaultmodule_la_LIBADD   = @PROG_LIBS@ @PORTAUDIO_LIBS@
 src_libout123_modules_libdefaultmodule_la_CPPFLAGS = \
   $(AM_CPPFLAGS) \
   $(libout123_mod_cppflags)
@@ -371,7 +371,7 @@ src_libout123_modules_output_pulse_la_LDFLAGS = \
   -export-dynamic  -export-symbols-regex '^mpg123_' \
   @PULSE_LDFLAGS@
 src_libout123_modules_output_pulse_la_CFLAGS   = @PULSE_CFLAGS@
-src_libout123_modules_output_pulse_la_LIBADD   = \
+src_libout123_modules_output_pulse_la_LIBADD   = @PROG_LIBS@ \
   src/compat/libcompat_str.la \
   @PULSE_LIBS@
 src_libout123_modules_outout_pulse_la_CPPFLAGS = \
@@ -384,7 +384,7 @@ src_libout123_modules_libdefaultmodule_la_SOURCES  = \
   src/libout123/modules/pulse.c
 src_libout123_modules_libdefaultmodule_la_CFLAGS   = @PULSE_CFLAGS@
 src_libout123_modules_libdefaultmodule_la_LDFLAGS  = @PULSE_LDFLAGS@
-src_libout123_modules_libdefaultmodule_la_LIBADD   = @PULSE_LIBS@
+src_libout123_modules_libdefaultmodule_la_LIBADD   = @PROG_LIBS@ @PULSE_LIBS@
 src_libout123_modules_libdefaultmodule_la_CPPFLAGS = \
   $(AM_CPPFLAGS) \
   $(libout123_mod_cppflags)
@@ -401,7 +401,7 @@ src_libout123_modules_output_sdl_la_LDFLAGS = \
   -export-dynamic  -export-symbols-regex '^mpg123_' \
   @SDL_LDFLAGS@
 src_libout123_modules_output_sdl_la_CFLAGS   = @SDL_CFLAGS@
-src_libout123_modules_output_sdl_la_LIBADD   = \
+src_libout123_modules_output_sdl_la_LIBADD   = @PROG_LIBS@ \
   src/compat/libcompat_str.la \
   @SDL_LIBS@
 src_libout123_modules_outout_sdl_la_CPPFLAGS = \
@@ -414,7 +414,7 @@ src_libout123_modules_libdefaultmodule_la_SOURCES  = \
   src/libout123/modules/sdl.c
 src_libout123_modules_libdefaultmodule_la_CFLAGS   = @SDL_CFLAGS@
 src_libout123_modules_libdefaultmodule_la_LDFLAGS  = @SDL_LDFLAGS@
-src_libout123_modules_libdefaultmodule_la_LIBADD   = @SDL_LIBS@
+src_libout123_modules_libdefaultmodule_la_LIBADD   = @PROG_LIBS@ @SDL_LIBS@
 src_libout123_modules_libdefaultmodule_la_CPPFLAGS = \
   $(AM_CPPFLAGS) \
   $(libout123_mod_cppflags)
@@ -431,7 +431,7 @@ src_libout123_modules_output_sndio_la_LDFLAGS = \
   -export-dynamic  -export-symbols-regex '^mpg123_' \
   @SNDIO_LDFLAGS@
 src_libout123_modules_output_sndio_la_CFLAGS   = @SNDIO_CFLAGS@
-src_libout123_modules_output_sndio_la_LIBADD   = \
+src_libout123_modules_output_sndio_la_LIBADD   = @PROG_LIBS@ \
   src/compat/libcompat_str.la \
   @SNDIO_LIBS@
 src_libout123_modules_outout_sndio_la_CPPFLAGS = \
@@ -444,7 +444,7 @@ src_libout123_modules_libdefaultmodule_la_SOURCES  = \
   src/libout123/modules/sndio.c
 src_libout123_modules_libdefaultmodule_la_CFLAGS   = @SNDIO_CFLAGS@
 src_libout123_modules_libdefaultmodule_la_LDFLAGS  = @SNDIO_LDFLAGS@
-src_libout123_modules_libdefaultmodule_la_LIBADD   = @SNDIO_LIBS@
+src_libout123_modules_libdefaultmodule_la_LIBADD   = @PROG_LIBS@ @SNDIO_LIBS@
 src_libout123_modules_libdefaultmodule_la_CPPFLAGS = \
   $(AM_CPPFLAGS) \
   $(libout123_mod_cppflags)
@@ -461,7 +461,7 @@ src_libout123_modules_output_sun_la_LDFLAGS = \
   -export-dynamic  -export-symbols-regex '^mpg123_' \
   @SUN_LDFLAGS@
 src_libout123_modules_output_sun_la_CFLAGS   = @SUN_CFLAGS@
-src_libout123_modules_output_sun_la_LIBADD   = \
+src_libout123_modules_output_sun_la_LIBADD   = @PROG_LIBS@ \
   src/compat/libcompat_str.la \
   @SUN_LIBS@
 src_libout123_modules_outout_sun_la_CPPFLAGS = \
@@ -474,7 +474,7 @@ src_libout123_modules_libdefaultmodule_la_SOURCES  = \
   src/libout123/modules/sun.c
 src_libout123_modules_libdefaultmodule_la_CFLAGS   = @SUN_CFLAGS@
 src_libout123_modules_libdefaultmodule_la_LDFLAGS  = @SUN_LDFLAGS@
-src_libout123_modules_libdefaultmodule_la_LIBADD   = @SUN_LIBS@
+src_libout123_modules_libdefaultmodule_la_LIBADD   = @PROG_LIBS@ @SUN_LIBS@
 src_libout123_modules_libdefaultmodule_la_CPPFLAGS = \
   $(AM_CPPFLAGS) \
   $(libout123_mod_cppflags)
@@ -491,7 +491,7 @@ src_libout123_modules_output_win32_la_LDFLAGS = \
   -export-dynamic  -export-symbols-regex '^mpg123_' \
   @WIN32_LDFLAGS@
 src_libout123_modules_output_win32_la_CFLAGS   = @WIN32_CFLAGS@
-src_libout123_modules_output_win32_la_LIBADD   = \
+src_libout123_modules_output_win32_la_LIBADD   = @PROG_LIBS@ \
   src/compat/libcompat_str.la \
   @WIN32_LIBS@
 src_libout123_modules_outout_win32_la_CPPFLAGS = \
@@ -504,7 +504,7 @@ src_libout123_modules_libdefaultmodule_la_SOURCES  = \
   src/libout123/modules/win32.c
 src_libout123_modules_libdefaultmodule_la_CFLAGS   = @WIN32_CFLAGS@
 src_libout123_modules_libdefaultmodule_la_LDFLAGS  = @WIN32_LDFLAGS@
-src_libout123_modules_libdefaultmodule_la_LIBADD   = @WIN32_LIBS@
+src_libout123_modules_libdefaultmodule_la_LIBADD   = @PROG_LIBS@ @WIN32_LIBS@
 src_libout123_modules_libdefaultmodule_la_CPPFLAGS = \
   $(AM_CPPFLAGS) \
   $(libout123_mod_cppflags)
@@ -521,7 +521,7 @@ src_libout123_modules_output_win32_wasapi_la_LDFLAGS = \
   -export-dynamic  -export-symbols-regex '^mpg123_' \
   @WIN32_WASAPI_LDFLAGS@
 src_libout123_modules_output_win32_wasapi_la_CFLAGS   = @WIN32_WASAPI_CFLAGS@
-src_libout123_modules_output_win32_wasapi_la_LIBADD   = \
+src_libout123_modules_output_win32_wasapi_la_LIBADD   = @PROG_LIBS@ \
   src/compat/libcompat_str.la \
   @WIN32_WASAPI_LIBS@
 src_libout123_modules_outout_win32_wasapi_la_CPPFLAGS = \
@@ -534,7 +534,7 @@ src_libout123_modules_libdefaultmodule_la_SOURCES  = \
   src/libout123/modules/win32_wasapi.c
 src_libout123_modules_libdefaultmodule_la_CFLAGS   = @WIN32_WASAPI_CFLAGS@
 src_libout123_modules_libdefaultmodule_la_LDFLAGS  = @WIN32_WASAPI_LDFLAGS@
-src_libout123_modules_libdefaultmodule_la_LIBADD   = @WIN32_WASAPI_LIBS@
+src_libout123_modules_libdefaultmodule_la_LIBADD   = @PROG_LIBS@ @WIN32_WASAPI_LIBS@
 src_libout123_modules_libdefaultmodule_la_CPPFLAGS = \
   $(AM_CPPFLAGS) \
   $(libout123_mod_cppflags)
@@ -551,7 +551,7 @@ src_libout123_modules_output_aix_la_LDFLAGS = \
   -export-dynamic  -export-symbols-regex '^mpg123_' \
   @AIX_LDFLAGS@
 src_libout123_modules_output_aix_la_CFLAGS   = @AIX_CFLAGS@
-src_libout123_modules_output_aix_la_LIBADD   = \
+src_libout123_modules_output_aix_la_LIBADD   = @PROG_LIBS@ \
   src/compat/libcompat_str.la \
   @AIX_LIBS@
 src_libout123_modules_outout_aix_la_CPPFLAGS = \
@@ -564,7 +564,7 @@ src_libout123_modules_libdefaultmodule_la_SOURCES  = \
   src/libout123/modules/aix.c
 src_libout123_modules_libdefaultmodule_la_CFLAGS   = @AIX_CFLAGS@
 src_libout123_modules_libdefaultmodule_la_LDFLAGS  = @AIX_LDFLAGS@
-src_libout123_modules_libdefaultmodule_la_LIBADD   = @AIX_LIBS@
+src_libout123_modules_libdefaultmodule_la_LIBADD   = @PROG_LIBS@ @AIX_LIBS@
 src_libout123_modules_libdefaultmodule_la_CPPFLAGS = \
   $(AM_CPPFLAGS) \
   $(libout123_mod_cppflags)
@@ -581,7 +581,7 @@ src_libout123_modules_output_alib_la_LDFLAGS = \
   -export-dynamic  -export-symbols-regex '^mpg123_' \
   @ALIB_LDFLAGS@
 src_libout123_modules_output_alib_la_CFLAGS   = @ALIB_CFLAGS@
-src_libout123_modules_output_alib_la_LIBADD   = \
+src_libout123_modules_output_alib_la_LIBADD   = @PROG_LIBS@ \
   src/compat/libcompat_str.la \
   @ALIB_LIBS@
 src_libout123_modules_outout_alib_la_CPPFLAGS = \
@@ -594,7 +594,7 @@ src_libout123_modules_libdefaultmodule_la_SOURCES  = \
   src/libout123/modules/alib.c
 src_libout123_modules_libdefaultmodule_la_CFLAGS   = @ALIB_CFLAGS@
 src_libout123_modules_libdefaultmodule_la_LDFLAGS  = @ALIB_LDFLAGS@
-src_libout123_modules_libdefaultmodule_la_LIBADD   = @ALIB_LIBS@
+src_libout123_modules_libdefaultmodule_la_LIBADD   = @PROG_LIBS@ @ALIB_LIBS@
 src_libout123_modules_libdefaultmodule_la_CPPFLAGS = \
   $(AM_CPPFLAGS) \
   $(libout123_mod_cppflags)
@@ -611,7 +611,7 @@ src_libout123_modules_output_arts_la_LDFLAGS = \
   -export-dynamic  -export-symbols-regex '^mpg123_' \
   @ARTS_LDFLAGS@
 src_libout123_modules_output_arts_la_CFLAGS   = @ARTS_CFLAGS@
-src_libout123_modules_output_arts_la_LIBADD   = \
+src_libout123_modules_output_arts_la_LIBADD   = @PROG_LIBS@ \
   src/compat/libcompat_str.la \
   @ARTS_LIBS@
 src_libout123_modules_outout_arts_la_CPPFLAGS = \
@@ -624,7 +624,7 @@ src_libout123_modules_libdefaultmodule_la_SOURCES  = \
   src/libout123/modules/arts.c
 src_libout123_modules_libdefaultmodule_la_CFLAGS   = @ARTS_CFLAGS@
 src_libout123_modules_libdefaultmodule_la_LDFLAGS  = @ARTS_LDFLAGS@
-src_libout123_modules_libdefaultmodule_la_LIBADD   = @ARTS_LIBS@
+src_libout123_modules_libdefaultmodule_la_LIBADD   = @PROG_LIBS@ @ARTS_LIBS@
 src_libout123_modules_libdefaultmodule_la_CPPFLAGS = \
   $(AM_CPPFLAGS) \
   $(libout123_mod_cppflags)
@@ -641,7 +641,7 @@ src_libout123_modules_output_hp_la_LDFLAGS = \
   -export-dynamic  -export-symbols-regex '^mpg123_' \
   @HP_LDFLAGS@
 src_libout123_modules_output_hp_la_CFLAGS   = @HP_CFLAGS@
-src_libout123_modules_output_hp_la_LIBADD   = \
+src_libout123_modules_output_hp_la_LIBADD   = @PROG_LIBS@ \
   src/compat/libcompat_str.la \
   @HP_LIBS@
 src_libout123_modules_outout_hp_la_CPPFLAGS = \
@@ -654,7 +654,7 @@ src_libout123_modules_libdefaultmodule_la_SOURCES  = \
   src/libout123/modules/hp.c
 src_libout123_modules_libdefaultmodule_la_CFLAGS   = @HP_CFLAGS@
 src_libout123_modules_libdefaultmodule_la_LDFLAGS  = @HP_LDFLAGS@
-src_libout123_modules_libdefaultmodule_la_LIBADD   = @HP_LIBS@
+src_libout123_modules_libdefaultmodule_la_LIBADD   = @PROG_LIBS@ @HP_LIBS@
 src_libout123_modules_libdefaultmodule_la_CPPFLAGS = \
   $(AM_CPPFLAGS) \
   $(libout123_mod_cppflags)
@@ -671,7 +671,7 @@ src_libout123_modules_output_os2_la_LDFLAGS = \
   -export-dynamic  -export-symbols-regex '^mpg123_' \
   @OS2_LDFLAGS@
 src_libout123_modules_output_os2_la_CFLAGS   = @OS2_CFLAGS@
-src_libout123_modules_output_os2_la_LIBADD   = \
+src_libout123_modules_output_os2_la_LIBADD   = @PROG_LIBS@ \
   src/compat/libcompat_str.la \
   @OS2_LIBS@
 src_libout123_modules_outout_os2_la_CPPFLAGS = \
@@ -684,7 +684,7 @@ src_libout123_modules_libdefaultmodule_la_SOURCES  = \
   src/libout123/modules/os2.c
 src_libout123_modules_libdefaultmodule_la_CFLAGS   = @OS2_CFLAGS@
 src_libout123_modules_libdefaultmodule_la_LDFLAGS  = @OS2_LDFLAGS@
-src_libout123_modules_libdefaultmodule_la_LIBADD   = @OS2_LIBS@
+src_libout123_modules_libdefaultmodule_la_LIBADD   = @PROG_LIBS@ @OS2_LIBS@
 src_libout123_modules_libdefaultmodule_la_CPPFLAGS = \
   $(AM_CPPFLAGS) \
   $(libout123_mod_cppflags)
@@ -701,7 +701,7 @@ src_libout123_modules_output_sgi_la_LDFLAGS = \
   -export-dynamic  -export-symbols-regex '^mpg123_' \
   @SGI_LDFLAGS@
 src_libout123_modules_output_sgi_la_CFLAGS   = @SGI_CFLAGS@
-src_libout123_modules_output_sgi_la_LIBADD   = \
+src_libout123_modules_output_sgi_la_LIBADD   = @PROG_LIBS@ \
   src/compat/libcompat_str.la \
   @SGI_LIBS@
 src_libout123_modules_outout_sgi_la_CPPFLAGS = \
@@ -714,7 +714,7 @@ src_libout123_modules_libdefaultmodule_la_SOURCES  = \
   src/libout123/modules/sgi.c
 src_libout123_modules_libdefaultmodule_la_CFLAGS   = @SGI_CFLAGS@
 src_libout123_modules_libdefaultmodule_la_LDFLAGS  = @SGI_LDFLAGS@
-src_libout123_modules_libdefaultmodule_la_LIBADD   = @SGI_LIBS@
+src_libout123_modules_libdefaultmodule_la_LIBADD   = @PROG_LIBS@ @SGI_LIBS@
 src_libout123_modules_libdefaultmodule_la_CPPFLAGS = \
   $(AM_CPPFLAGS) \
   $(libout123_mod_cppflags)
@@ -731,7 +731,7 @@ src_libout123_modules_output_mint_la_LDFLAGS = \
   -export-dynamic  -export-symbols-regex '^mpg123_' \
   @MINT_LDFLAGS@
 src_libout123_modules_output_mint_la_CFLAGS   = @MINT_CFLAGS@
-src_libout123_modules_output_mint_la_LIBADD   = \
+src_libout123_modules_output_mint_la_LIBADD   = @PROG_LIBS@ \
   src/compat/libcompat_str.la \
   @MINT_LIBS@
 src_libout123_modules_outout_mint_la_CPPFLAGS = \
@@ -744,7 +744,7 @@ src_libout123_modules_libdefaultmodule_la_SOURCES  = \
   src/libout123/modules/mint.c
 src_libout123_modules_libdefaultmodule_la_CFLAGS   = @MINT_CFLAGS@
 src_libout123_modules_libdefaultmodule_la_LDFLAGS  = @MINT_LDFLAGS@
-src_libout123_modules_libdefaultmodule_la_LIBADD   = @MINT_LIBS@
+src_libout123_modules_libdefaultmodule_la_LIBADD   = @PROG_LIBS@ @MINT_LIBS@
 src_libout123_modules_libdefaultmodule_la_CPPFLAGS = \
   $(AM_CPPFLAGS) \
   $(libout123_mod_cppflags)
@@ -761,7 +761,7 @@ src_libout123_modules_output_openal_la_LDFLAGS = \
   -export-dynamic  -export-symbols-regex '^mpg123_' \
   @OPENAL_LDFLAGS@
 src_libout123_modules_output_openal_la_CFLAGS   = @OPENAL_CFLAGS@
-src_libout123_modules_output_openal_la_LIBADD   = \
+src_libout123_modules_output_openal_la_LIBADD   = @PROG_LIBS@ \
   src/compat/libcompat_str.la \
   @OPENAL_LIBS@
 src_libout123_modules_outout_openal_la_CPPFLAGS = \
@@ -774,7 +774,7 @@ src_libout123_modules_libdefaultmodule_la_SOURCES  = \
   src/libout123/modules/openal.c
 src_libout123_modules_libdefaultmodule_la_CFLAGS   = @OPENAL_CFLAGS@
 src_libout123_modules_libdefaultmodule_la_LDFLAGS  = @OPENAL_LDFLAGS@
-src_libout123_modules_libdefaultmodule_la_LIBADD   = @OPENAL_LIBS@
+src_libout123_modules_libdefaultmodule_la_LIBADD   = @PROG_LIBS@ @OPENAL_LIBS@
 src_libout123_modules_libdefaultmodule_la_CPPFLAGS = \
   $(AM_CPPFLAGS) \
   $(libout123_mod_cppflags)
