@@ -3,6 +3,8 @@
 - Windows build fixes for UWP and without GetThreadErrorMode when not
   building modules, thanks to Steve LHomme.
 - More CMake build fixes thanks to David Callu (bug 290).
+- Use PROG_LIBS for output modules, to reinstate not necessarily proper but
+  previous behaviour and fix FreeBSD port build (bug 291).
 
 1.26.1
 ------
